app/assets/stylesheets/my_styles.css
/* landing page styles */

.therapist {
  height: 800px;
  top: 100px;
  left: 75px;
}

.logo {
  color: white;
  letter-spacing: 5px;
  text-align: right;
  padding-right: 200px;
  padding-top: 220px;
}

.sign-in {
  text-align: right;
  padding-right: 210px;
  list-style-type: none;
}

.sign-in a {
  text-decoration: none;
}

/*Jquery animate percentage loader*/

#topLoader {
  width: 256px;
  height: 256px;
  margin-bottom: 72px;
}

#animateButton {
  width: 256px;
  margin-bottom: 10px;
}


input {
  margin-bottom: 10px;
  width: 257px;
}

body {
background: rgb(32,32,32);
background: -moz-linear-gradient(top, rgb(32,32,32) 40%, rgb(2,50,50) 100%);
background: -webkit-gradient(left top, left bottom, color-stop(40%, rgb(32,32,32)), color-stop(100%, rgb(2,50,50)));
background: -webkit-linear-gradient(top, rgb(32,32,32) 40%, rgb(2,50,50) 100%);
background: -o-linear-gradient(top, rgb(32,32,32) 40%, rgb(2,50,50) 100%);
background: -ms-linear-gradient(top, rgb(32,32,32) 40%, rgb(2,50,50) 100%);
background: linear-gradient(to bottom, rgb(32,32,32) 40%, rgb(2,50,50) 100%);
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#202020', endColorstr='#023232', GradientType=0 );
}

h1, h2, h3, h4, h5, h6, li {
  color: white;
}


.navbar {
  background-color: #202020;
  margin-bottom: 10px;
}

.navbar-default .navbar-nav > li > a {
color: white;
text-align: right;
font-size: 16px;
}

.navbar-default {
  border-color: #202020;
}

.navbar-brand {
  color: white;
}

.page-header {
  border-color: #777777;
}

blockquote {
padding: 10.5px 21px;
margin: 0 0 21px;
border-left: 1px solid #777777;
font-family: "News Cycle", helvetica;
}


/* percentage results styles */

.dr-moodswing{
  color: #B4D6EC;
  margin-bottom: 15px;
}

#positive h1{
  font-size: 150px;
  margin-top: -30px;
}

#positive h2 {
  color: #B4D6EC;
  margin-top: -10px;
}

#negative h1{
  color: #EB6864;
  font-size: 150px;
  margin-top: -15px;
}

#negative h2 {
  color: #EB6864;
  margin-top: -5px;
}

.happy-large {
  font-size: 45px;
}

.sad-large {
  font-size: 45px;
}

/* friend tweet styles */

#tweet-results {
  font-family: "News Cycle";
  height: 500px;
  overflow: scroll;
}

#tweet-results > ul > li:nth-child(1n) {
  margin-top: 6px;
}

#tweet-results > ul > li:nth-child(2n) {
  color: #9DB0BE;
  margin-top: 6px;
}

.gradient-height {
  height: 1000px;
}


/* specific typography styles */

.clients {
  margin-top: 35px;
  margin-left: 40px;
}

.client-list {
 margin-left: 30px;
}

.client-list > li {
 height: 30px;
}

.client-results {
  padding-left: 20px;
  display: inline;
  color: #B0B0B0;
}

.twitter-name{
  display: inline;
  color: #B0B0A7;
  margin-left: 5px;
  font-size: .8em;
}

.twitter-handle{
  color: #EAF4FA;
  display: inline;
  color: #E0EFF8;
  font-size: .8em;
  letter-spacing: .2em;
  margin-left: 3px;
}

.dummy-copy {
  line-height: 25px;
  letter-spacing: 1px;
  color: #B0B0B0;
}

h4 {
    padding-top: 5px;
    line-height: 28px;
    color: #DFEEF8;
}

.happy {
  color: #B4D6EC;
  display: inline;
}

.sad {
  color: #EB6864;
  display: inline;
}

.slash {
  display: inline;
}

/* prevent hover from sign-in inside nav bar */

li > a:focus {
    background-color: none;
}

